Fixed loading of metadata files located on server FS